# OpenSquirrel

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC.md  rust-toolchain.toml  superset-rewrite.md
src/: app.rs  assets.rs  changes.rs  config.rs  daemon.rs  daemon_client.rs  hooks.rs  lib.rs  main.rs  runtime.rs  theme.rs  worktree.rs
tests/: state_tests.rs
