[package]
name = "opensquirrel"
version = "0.1.0"
edition = "2024"
description = "GPU-rendered, keyboard-driven agent tiling manager"
license = "MIT"

[dependencies]
gpui = { version = "0.2", features = ["runtime_shaders"] }
async-channel = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1.0.102"
gpui-terminal = "0.1"
portable-pty = "0.9"
ctrlc = "3"
libc = "0.2"
